objects/Bus__c.object
<CustomObject>
    <description>Hold the information of the busses.</description>
    <fields>
        <fullName>Bus_Plate_Number__c</fullName>
        <description>Refers to the Vehicle Registration Number of Bus.</description>
        <inlineHelpText>Vehicle Registration Number</inlineHelpText>
        <label>Bus Plate Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bus_Type__c</fullName>
        <description>Bus Type field has two values, Aircon and Non Aircon</description>
        <label>Bus Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A.C.</fullName>
                    <default>true</default>
                    <label>A.C.</label>
                </value>
                <value>
                    <fullName>Non A.C.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Total number of persons a bus can accomodate including driver.</description>
        <inlineHelpText>Total Number of Persons a bus can accomodate.</inlineHelpText>
        <label>Capacity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bus</label>
    <nameField>
        <displayFormat>A - {0000}</displayFormat>
        <label>Bus Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Busses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>